# cpp-Template

./: .gitignore  CMakeLists.txt  README.md
include/: myLib.h
src/: main.cpp  myLib.cpp
